minor fix on sequential API lab

--- a/notebooks/db_module_1/labs/2_keras_sequential_api_vertex.ipynb
+++ b/notebooks/db_module_1/labs/2_keras_sequential_api_vertex.ipynb
@@ -227,9 +227,7 @@
     "\n",
     "Our `create_dataset` function above generates batches of training examples, so we can use `.fit`. \n",
     "\n",
-    "We start by setting up some parameters for our training job and create the data generators for the training and validation data.\n",
-    "\n",
-    "We refer you the the blog post [ML Design Pattern #3: Virtual Epochs](https://medium.com/google-cloud/ml-design-pattern-3-virtual-epochs-f842296de730) for further details on why express the training in terms of `NUM_TRAIN_EXAMPLES` and `NUM_EVALS` and why, in this training code, the number of epochs is really equal to the number of evaluations we perform."
+    "We start by setting up some parameters for our training job and create the data generators for the training and validation data.\n"
    ]
   },
   {
@@ -238,11 +236,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRAIN_BATCH_SIZE = 1000\n",
-    "NUM_TRAIN_EXAMPLES = 10000 * 5  # training dataset will repeat, wrap around\n",
-    "NUM_EVALS = 50  # how many times to evaluate\n",
-    "NUM_EVAL_EXAMPLES = 10000  # enough to get a reasonable sample\n",
-    "\n",
     "train_feature, train_label = create_dataset(pattern=\"../data/taxi-train.csv\")\n",
     "\n",
     "eval_feature, eval_label = create_dataset(pattern=\"../data/taxi-valid.csv\")"
@@ -259,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise.** In the cell below, you will train your model. First, define the `steps_per_epoch` then train your model using `.fit()`, saving the model training output to a variable called `history`."
+    "**Exercise.** In the cell below, you will train your model. Train your model using `.fit()`, saving the model training output to a variable called `history`."
    ]
   },
   {
@@ -269,8 +262,6 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "steps_per_epoch =  # TODO: Your code here\n",
-    "\n",
     "LOGDIR = \"./taxi_trained\"\n",
     "history =  # TODO: Your code here"
    ]
