--- a/notebooks/db_module_1/solutions/2_keras_sequential_api_vertex.ipynb
+++ b/notebooks/db_module_1/solutions/2_keras_sequential_api_vertex.ipynb
@@ -165,8 +165,8 @@
     "# Build a keras DNN model using Sequential API\n",
     "model = Sequential(\n",
     "    [\n",
-    "        Dense(units=32, activation=\"relu\", name=\"h1\"),\n",
-    "        Dense(units=8, activation=\"relu\", name=\"h2\"),\n",
+    "        Dense(units=32, activation=\"relu\", name=\"input_layer\"),\n",
+    "        Dense(units=8, activation=\"relu\", name=\"hidden\"),\n",
     "        Dense(units=1, activation=\"linear\", name=\"output\"),\n",
     "    ]\n",
     ")"
@@ -219,9 +219,7 @@
     "\n",
     "Our `create_dataset` function above generates batches of training examples, so we can use `.fit`. \n",
     "\n",
-    "We start by setting up some parameters for our training job and create the data generators for the training and validation data.\n",
-    "\n",
-    "We refer you the the blog post [ML Design Pattern #3: Virtual Epochs](https://medium.com/google-cloud/ml-design-pattern-3-virtual-epochs-f842296de730) for further details on why express the training in terms of `NUM_TRAIN_EXAMPLES` and `NUM_EVALS` and why, in this training code, the number of epochs is really equal to the number of evaluations we perform."
+    "We start by setting up some parameters for our training job and create the data generators for the training and validation data.\n"
    ]
   },
   {
@@ -230,11 +228,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRAIN_BATCH_SIZE = 1000\n",
-    "NUM_TRAIN_EXAMPLES = 10000 * 5  # training dataset will repeat, wrap around\n",
-    "NUM_EVALS = 50  # how many times to evaluate\n",
-    "NUM_EVAL_EXAMPLES = 10000  # enough to get a reasonable sample\n",
-    "\n",
     "train_feature, train_label = create_dataset(pattern=\"../data/taxi-train.csv\")\n",
     "\n",
     "eval_feature, eval_label = create_dataset(pattern=\"../data/taxi-valid.csv\")"
@@ -254,14 +247,12 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "steps_per_epoch = NUM_TRAIN_EXAMPLES // (TRAIN_BATCH_SIZE * NUM_EVALS)\n",
     "\n",
     "LOGDIR = \"./taxi_trained\"\n",
     "history = model.fit(\n",
     "    x=train_feature,\n",
     "    y=train_label,\n",
-    "    steps_per_epoch=steps_per_epoch,\n",
-    "    epochs=NUM_EVALS,\n",
+    "    epochs=5,\n",
     "    validation_data=(eval_feature, eval_label),\n",
     "    callbacks=[TensorBoard(LOGDIR)],\n",
     ")"
@@ -427,7 +418,7 @@
     "\n",
     "# from https://cloud.google.com/vertex-ai/docs/predictions/pre-built-containers\n",
     "SERVING_CONTAINER_IMAGE_URI = (\n",
-    "    \"us-docker.pkg.dev/vertex-ai/prediction/tf2-cpu.2-3:latest\"\n",
+    "    \"us-docker.pkg.dev/vertex-ai/prediction/tf2-cpu.2-8:latest\"\n",
     ")\n",
     "\n",
     "os.environ[\"BUCKET\"] = BUCKET\n",
@@ -505,7 +496,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "instance = {\"h1_input\": [-73.982683, 40.742104, -73.983766, 40.755174, 3.0]}"
+    "instance = {\n",
+    "    \"input_layer_input\": [-73.982683, 40.742104, -73.983766, 40.755174, 3.0]\n",
+    "}"
    ]
   },
   {
